--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      java: openjdk11
     commands:
       - sudo apt-get update
       - sudo apt-get install zip bc
